TEST_PROGRAMS/typing_benchmarks/invalid/assign2.go
package main

func main() {
	var x float64 = 1
}
